--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "intervention/image": "^3.9",
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
+        "maatwebsite/excel": "^3.1",
         "spatie/laravel-permission": "^6.10",
         "stripe/stripe-php": "^16.3"
     },
